# Ftp-FM

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.c  meson.build  optconfig.cmake
config/: config.h.in
include/: ftpfm.h  ftpfm_logprint.h
src/: ftpfm.c  ftpfm_logprint.c
subprojects/: Arghlp.wrap  Minilog.wrap
